style.css
@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Playfair:ital,opsz,wght@0,5..1200,900;1,5..1200,900&display=swap");

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

.container {
  background-color: rgb(233, 223, 213);
  min-height: 100vh;
  padding: 20px;
  font-family: "Lato", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header-nav,
.header-btn {
  display: none;
}

.logo {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 10px;
}

.logo > button {
  padding: 10px 15px;
  border-radius: 15px;
  border: none;
  color: white;
  font-weight: 700;
  background: linear-gradient(
    to bottom right,
    rgb(249, 191, 77),
    rgb(245, 142, 101)
  );
}

.main {
  padding: 30px 0;
}

.hero-img {
  display: flex;
  justify-content: center;
  align-items: center;
}
.hero-img > img {
  width: 250px;
}
.hero-img .absolute {
  position: absolute;
  z-index: 0;
}
.hero-img .hero {
  z-index: 1;
}
.hero-img > .purple {
  transform: rotate(-20deg);
}

.hero-img > .pink {
  transform: rotate(-40deg);
}
.hero-img > .blue {
  transform: rotate(-60deg);
}

.hero-text {
  display: flex;
  flex-direction: column;
  align-items: start;
  justify-content: center;
}

.hero-text > h1 {
  font-size: 3rem;
  margin: 1rem;
  /* padding: 1rem; */
  font-family: "Playfair", serif;
  font-optical-sizing: auto;
  font-weight: 900;
  font-style: normal;
  font-variation-settings: "wdth" 100;
}

.hero-text > p {
  font-size: 1.2rem;
  line-height: 1.5rem;
  margin: 1rem;
}

.hero-text > form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: start;
  gap: 0.5rem;
  width: 90%;
  margin: 1rem;
}

.hero-text > form input#email,
.hero-text > form input#submit-btn {
  padding: 0.8rem 0.9rem;
  border: none;
  border-radius: 0.2rem;
  font-size: 0.9rem;
  width: 100%;
}

.hero-text > form input#submit-btn {
  background-color: rgb(24, 119, 242);
  color: #fff;
}

.hero-text > span {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 1rem;
}

.footer > .social-icon {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 2rem;
  gap: 1rem;
}

.footer > .social-icon img {
  width: 40px;
}

.footer .expert-doubt {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 1rem;
  padding: 0 1rem;
}

@media (min-width: 768px) {
  /* body {
    display: none;
  } */
  .container {
    padding: 20px;
    /* height: 100vh; */
  }
  .header-nav,
  .header-btn {
    display: none;
  }

  .logo > button {
    background: linear-gradient(
      to bottom right,
      rgb(241 200 120),
      rgb(238 28 94)
    );
  }
  .hero-text > form {
    flex-direction: row;
    width: 100%;
    justify-content: start;
  }
  .hero-text > form input#email,
  .hero-text > form input#submit-btn {
    padding: 1rem;
    border: none;
    border-radius: 0.3rem;
    font-size: 1.2rem;
    width: 50%;
  }
  .hero-text > form input#submit-btn {
    width: 25%;
  }

  .footer {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 1rem;
  }
  .footer > .social-icon {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 0rem;
    gap: 1rem;
  }
}
@media (max-width: 1023px) {
  .header-nav {
    display: block;
  }
  .header-nav ul {
    background-color: rgb(233, 223, 213);
    display: block;
    position: absolute;
    top: 80px;
    left: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    list-style: none;
    width: 100%;
    height: 100vh;
    gap: 20px;
    z-index: 3;
    transform: translate(-100%, 0);
    transition: transform 0.58s ease-in;
  }
  .header-nav ul.show {
    transform: translate(0%, 0);
  }
  .header-nav ul a {
    text-decoration: none;
    font-size: 1rem;
    color: #000;
  }
}
@media (min-width: 1024px) {
  .header,
  .footer {
    padding: 0 1rem;
  }
  .header-nav ul {
    display: flex;
    align-items: center;
    list-style: none;
    flex-direction: row;
  }
  .header-nav ul li {
    margin-left: 1rem;
  }

  .header-nav ul a {
    text-decoration: none;
    font-size: 1rem;
    color: #000;
  }
  .header,
  .footer,
  .main {
    width: 950px;
    margin: 0 auto;
  }
  .main {
    display: flex;
    flex-direction: row-reverse;
    justify-content: space-between;
    align-items: center;
    height: 77vh;
  }
  .header-nav,
  .header-btn {
    display: block;
  }
  .hero-text,
  .hero-img {
    flex: 1;
  }
  .hero-img {
    justify-content: flex-end;
  }
  .fa-solid {
    display: none;
  }
  .btn {
    padding: 0.8rem;
    border: none;
    border-radius: 0.3rem;
    font-size: 1.2rem;
    margin-left: 10px;
    transition: hover 1s;
  }
  .btn-blue {
    background-color: rgb(24, 119, 242);
    color: #fff;
  }
  .btn:hover {
    background-color: #fff;
    color: rgb(24, 119, 242);
  }
  .hero-text > form input#email {
    width: 65%;
  }
  .hero-text > form input#submit-btn {
    width: 30%;
  }
}

